--- a/JetBrains.AppStore.NotaryApi/JetBrains.AppStore.NotaryApi.csproj
+++ b/JetBrains.AppStore.NotaryApi/JetBrains.AppStore.NotaryApi.csproj
@@ -13,12 +13,12 @@
         <PackageReference Include="JetBrains.Annotations" Version="10.2.1"/>
         <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="6.17.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
-        <PackageReference Include="Portable.BouncyCastle" Version="1.9.0"/>
+        <PackageReference Include="BouncyCastle.Cryptography" Version="2.2.1"/>
     </ItemGroup>
 
     <PropertyGroup Label="NuGet">
         <PackageId>JetBrains.AppStore.NotaryApi</PackageId>
-        <Version>1.0.10</Version>
+        <Version>1.0.11</Version>
         <Authors>Ilia Kirianovskii</Authors>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <PackageProjectUrl>https://github.com/JetBrains/apple-notary-api-dotnet-client</PackageProjectUrl>
